--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@google/generative-ai": "^0.6.0",
+    "@orca-so/whirlpools-sdk": "^0.15.0",
     "@project-serum/anchor": "^0.26.0",
+    "@solana-tracker/data-api": "^0.1.2",
     "@solana/spl-token": "^0.4.13",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.98.4",
     "apify-client": "^2.12.4",
     "axios": "^1.4.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "bs58": "^6.0.0",
     "config": "^3.3.9",
@@ -21,6 +25,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "node-cron": "^3.0.2",
