--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "universeofgamers",
+  "name": "io.ionic.starter",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -37,6 +37,7 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/mocha": "^10.0.10",
