--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "io.ionic.starter",
+  "name": "universe-of-gamers-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
@@ -18,12 +20,14 @@
     "apify-client": "^2.12.4",
     "axios": "^1.4.0",
     "bcrypt": "^6.0.0",
+    "bip39": "^3.1.0",
     "body-parser": "^2.2.0",
     "bs58": "^6.0.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
+    "ed25519-hd-key": "^1.3.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
@@ -38,8 +42,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/bn.js": "^5.2.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
