--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "dotenv": "^17.2.1",
     "ed25519-hd-key": "^1.3.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.7.0",
     "openai": "^4.12.0",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "telegraf": "^4.12.2",
     "tweetnacl": "^1.0.3",
     "twitter-api-v2": "^1.14.0",
@@ -49,6 +52,8 @@
     "@types/mocha": "^10.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "dotenv-cli": "^8.0.0",
     "mocha": "^11.7.1",
     "nodemon": "^3.0.1",
