--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "ed25519-hd-key": "^1.3.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.7.0",
     "openai": "^4.12.0",
+    "p-limit": "^7.1.1",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
     "telegraf": "^4.12.2",
