--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@google/generative-ai": "^0.6.0",
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@orca-so/whirlpools-sdk": "^0.15.0",
     "@project-serum/anchor": "^0.26.0",
     "@solana-tracker/data-api": "^0.1.2",
