--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "telegraf": "^4.12.2",
     "tweetnacl": "^1.0.3",
     "twitter-api-v2": "^1.14.0",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -57,6 +58,7 @@
     "@types/node": "^24.3.0",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
+    "@types/ws": "^8.18.1",
     "dotenv-cli": "^8.0.0",
     "mocha": "^11.7.1",
     "nodemon": "^3.0.1",
