update wallet import privatekey

--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,4 @@ funded_accounts.json
 mainnet_uog.so
 uploads/
 db/universeofgamers-2025-09-17.archive.gz
+db/universeofgamers-2025-10-08.archive.gz
