--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@orca-so/whirlpools-sdk": "^0.15.0",
     "@project-serum/anchor": "^0.26.0",
     "@solana-tracker/data-api": "^0.1.2",
+    "@solana/buffer-layout-utils": "^0.3.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.98.4",
