--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bs58": "^6.0.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "ed25519-hd-key": "^1.3.0",
