--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
+    "@google-cloud/secret-manager": "^6.1.1",
     "@google/generative-ai": "^0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@orca-so/whirlpools-sdk": "^0.15.0",
