fix battle_log, tournament, earning point, claim referral

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@google-cloud/secret-manager": "^6.1.1",
     "@google/generative-ai": "^0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+    "@metaplex-foundation/umi": "^1.4.1",
+    "@metaplex-foundation/umi-bundle-defaults": "^1.4.1",
+    "@metaplex-foundation/umi-rpc-web3js": "^1.4.1",
     "@orca-so/whirlpools-sdk": "^0.15.0",
     "@project-serum/anchor": "^0.26.0",
     "@solana-tracker/data-api": "^0.1.2",
